--- a/package.json
+++ b/package.json
@@ -62,6 +62,9 @@
     "aws-cdk-lib": "^2.68.0",
     "constructs": "^10.0.5"
   },
+  "dependencies": {
+    "@aws-cdk/assert": "^2.68.0"
+  },
   "keywords": [
     "cdk"
   ],
