--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
   "dependencies": {
     "@aws-cdk/assert": "^2.68.0"
   },
+  "bundledDependencies": [
+    "@aws-cdk/assert"
+  ],
   "keywords": [
     "cdk"
   ],
